--- a/typescript-mcp/package.json
+++ b/typescript-mcp/package.json
@@ -4,6 +4,8 @@
   "main": "index.js",
   "scripts": {
     "build": "tsc && shx chmod +x dist/**/*.js",
+    "start": "npm run build && node dist/src/mcp-server.js",
+    "start-inspector": "export DANGEROUSLY_OMIT_AUTH=true && npm run build && npx @modelcontextprotocol/inspector node dist/src/mcp-server.js",
     "prepare": "npm run build",
     "watch": "tsc --watch"
   },
@@ -11,11 +13,13 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "@modelcontextprotocol/sdk": "^1.8.0",
-    "openai": "^4.91.1"
+    "@modelcontextprotocol/sdk": "1.13.1",
+    "openai": "^4.104.0",
+    "pg": "^8.16.2"
   },
   "devDependencies": {
-    "@types/node": "^22.13.17",
+    "@types/node": "^22.15.33",
+    "@types/pg": "^8.15.4",
     "shx": "^0.3.4",
     "typescript": "^5.6.2"
   }
